Change storing user email to a nickname; add silly logo
